[package]
authors.workspace = true
description       = "Darwinia node."
edition.workspace = true
name              = "darwinia"
readme            = "README.md"
version.workspace = true

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
# crates.io
array-bytes = { workspace = true }
async-trait = { version = "0.1" }
clap        = { version = "4.4", features = ["derive"] }
color-print = { version = "0.3" }
futures     = { version = "0.3" }
jsonrpsee   = { version = "0.23", features = ["server"] }
log         = { workspace = true }
serde       = { workspace = true }
serde_json  = { version = "1.0", features = ["arbitrary_precision"] }
tokio       = { version = "1.45" }
trauma      = { version = "2.2" }

# darwinia
crab-runtime     = { workspace = true, optional = true }
darwinia-runtime = { workspace = true, optional = true }
dc-primitives    = { workspace = true, features = ["std"] }

# frontier
fc-api          = { workspace = true }
fc-db           = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc          = { workspace = true }
fc-rpc-core     = { workspace = true }
fc-storage      = { workspace = true }
fp-evm          = { workspace = true, features = ["std"] }
fp-rpc          = { workspace = true, features = ["std"] }

# moonbeam
moonbeam-primitives-ext       = { workspace = true, optional = true, features = ["std"] }
moonbeam-rpc-debug            = { workspace = true }
moonbeam-rpc-primitives-debug = { workspace = true, features = ["std"] }
moonbeam-rpc-trace            = { workspace = true }

# polkadot-sdk
cumulus-client-cli                    = { workspace = true }
cumulus-client-collator               = { workspace = true }
cumulus-client-consensus-aura         = { workspace = true }
cumulus-client-consensus-common       = { workspace = true }
cumulus-client-consensus-proposer     = { workspace = true }
cumulus-client-parachain-inherent     = { workspace = true }
cumulus-client-service                = { workspace = true }
cumulus-primitives-aura               = { workspace = true, features = ["std"] }
cumulus-primitives-core               = { workspace = true, features = ["std"] }
cumulus-primitives-parachain-inherent = { workspace = true, features = ["std"] }
cumulus-relay-chain-interface         = { workspace = true }
cumulus-test-relay-sproof-builder     = { workspace = true }
frame-benchmarking                    = { workspace = true, optional = true, features = ["std"] }
frame-benchmarking-cli                = { workspace = true }
pallet-transaction-payment-rpc        = { workspace = true }
polkadot-cli                          = { workspace = true }
polkadot-primitives                   = { workspace = true, features = ["std"] }
sc-basic-authorship                   = { workspace = true }
sc-chain-spec                         = { workspace = true }
sc-cli                                = { workspace = true }
sc-client-api                         = { workspace = true }
sc-consensus                          = { workspace = true }
sc-consensus-aura                     = { workspace = true }
sc-executor                           = { workspace = true }
sc-network                            = { workspace = true }
sc-network-sync                       = { workspace = true }
sc-offchain                           = { workspace = true }
sc-rpc                                = { workspace = true }
sc-service                            = { workspace = true }
sc-storage-monitor                    = { workspace = true }
sc-sysinfo                            = { workspace = true }
sc-telemetry                          = { workspace = true }
sc-tracing                            = { workspace = true }
sc-transaction-pool                   = { workspace = true }
sc-transaction-pool-api               = { workspace = true }
sp-api                                = { workspace = true, features = ["std"] }
sp-block-builder                      = { workspace = true, features = ["std"] }
sp-blockchain                         = { workspace = true }
sp-consensus-aura                     = { workspace = true, features = ["std"] }
sp-core                               = { workspace = true, features = ["std"] }
sp-inherents                          = { workspace = true, features = ["std"] }
sp-io                                 = { workspace = true, features = ["std"] }
sp-keystore                           = { workspace = true }
sp-offchain                           = { workspace = true, features = ["std"] }
sp-runtime                            = { workspace = true, features = ["std"] }
sp-session                            = { workspace = true, features = ["std"] }
sp-timestamp                          = { workspace = true, features = ["std"] }
sp-transaction-pool                   = { workspace = true, features = ["std"] }
substrate-frame-rpc-system            = { workspace = true }
substrate-prometheus-endpoint         = { workspace = true }
xcm                                   = { workspace = true, features = ["std"] }

[features]
all-runtime = [
	# darwinia
	"crab-runtime",
	"darwinia-runtime",
]

evm-tracing = [
	# darwinia
	"crab-runtime?/evm-tracing",
	"darwinia-runtime?/evm-tracing",

	# moonbeam
	"moonbeam-primitives-ext",
]

runtime-benchmarks = [
	# darwinia
	"crab-runtime?/runtime-benchmarks",
	"darwinia-runtime?/runtime-benchmarks",

	# polkadot-sdk
	"frame-benchmarking",
	"frame-benchmarking-cli/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

dev = [
	# darwinia
	"crab-runtime?/dev",
	"darwinia-runtime?/dev",
]
fast-runtime = [
	# darwinia
	"crab-runtime?/fast-runtime",
	"darwinia-runtime?/fast-runtime",
]
