[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia node runtime common primitives"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-primitives"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "1.0.0"

[dependencies]
# paritytech primitives
sp-core    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.5" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.5" }
# darwinia-support
darwinia-support = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "darwinia-v0.12.5" }

[features]
default = ["std"]

std = [
	# paritytech primitives
	"sp-core/std",
	"sp-runtime/std",
	# darwinia-network
	"darwinia-support/std",
]

fast-runtime = []
