[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia node rpc"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-rpc"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "0.12.2-4"

[dependencies]
# crates.io
code           = { package = "parity-scale-codec", version = "2.3", default-features = false }
jsonrpc-core   = { version = "18.0" }
jsonrpc-pubsub = { version = "18.0" }
# darwinia-network frame
darwinia-balances-rpc = { git = "https://github.com/darwinia-network/darwinia-common", branch = "darwinia-v0.12.2" }
darwinia-staking-rpc  = { git = "https://github.com/darwinia-network/darwinia-common", branch = "darwinia-v0.12.2" }
# darwinia-network dvm
darwinia-ethereum             = { git = "https://github.com/darwinia-network/darwinia-common", branch = "darwinia-v0.12.2" }
fc-db                         = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.2" }
fc-rpc                        = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.2" }
fc-rpc-core                   = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.2" }
fp-rpc                        = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.2" }
fp-storage                    = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.2" }
moonbeam-rpc-debug            = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.2" }
moonbeam-rpc-primitives-debug = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.2" }
moonbeam-rpc-trace            = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.2" }
# darwinia-network primitives
crab-runtime        = { path = "../runtime/crab" }
darwinia-primitives = { path = "../primitives" }
# paritytech client
sc-chain-spec           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-client-api           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-consensus-babe       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-consensus-babe-rpc   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-consensus-epochs     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-finality-grandpa     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-finality-grandpa-rpc = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-rpc                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-sync-state-rpc       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-transaction-pool     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-transaction-pool-api = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
# paritytech frame
pallet-transaction-payment-rpc = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
substrate-frame-rpc-system     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
# paritytech primitives
sc-network        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-api            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-block-builder  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-blockchain     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-consensus      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-consensus-babe = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-keystore       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-runtime        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
