[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia node rpc"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-rpc"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "0.12.3-1"

[dependencies]
# crates.io
code           = { package = "parity-scale-codec", version = "2.3", default-features = false }
jsonrpc-core   = { version = "18.0" }
jsonrpc-pubsub = { version = "18.0" }
# darwinia-network dvm
darwinia-ethereum             = { git = "https://github.com/darwinia-network/darwinia-common", branch = "darwinia-v0.12.3" }
fc-db                         = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
fc-rpc                        = { features = ["rpc_binary_search_estimate"], git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
fc-rpc-core                   = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
fp-rpc                        = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
fp-storage                    = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
moonbeam-rpc-debug            = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.3" }
moonbeam-rpc-primitives-debug = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.3" }
moonbeam-rpc-trace            = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.3" }
# darwinia-network primitives
crab-runtime        = { path = "../runtime/crab" }
darwinia-primitives = { path = "../primitives" }
# paritytech client
sc-chain-spec           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-client-api           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus-babe       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus-babe-rpc   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus-epochs     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-finality-grandpa     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-finality-grandpa-rpc = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-rpc                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-sync-state-rpc       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-transaction-pool     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-transaction-pool-api = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
# paritytech frame
pallet-transaction-payment-rpc = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
substrate-frame-rpc-system     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
# paritytech primitives
sc-network        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-api            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-block-builder  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-blockchain     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-consensus      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-consensus-babe = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-keystore       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-runtime        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
