[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia node rpc"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-rpc"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "0.12.3-2"

[dependencies]
# crates.io
code           = { package = "parity-scale-codec", version = "2.3", default-features = false }
jsonrpc-core   = { version = "18.0" }
jsonrpc-pubsub = { version = "18.0" }
# darwinia-network dvm
darwinia-ethereum             = { git = "https://github.com/darwinia-network/darwinia-common", branch = "darwinia-v0.12.4" }
fc-db                         = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.4" }
fc-rpc                        = { features = ["rpc_binary_search_estimate"], git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.4" }
fc-rpc-core                   = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.4" }
fp-rpc                        = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.4" }
fp-storage                    = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.4" }
moonbeam-rpc-debug            = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.4" }
moonbeam-rpc-primitives-debug = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.4" }
moonbeam-rpc-trace            = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.4" }
# darwinia-network primitives
crab-runtime        = { path = "../runtime/crab" }
darwinia-primitives = { path = "../primitives" }
# paritytech client
sc-chain-spec           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-client-api           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-consensus-babe       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-consensus-babe-rpc   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-consensus-epochs     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-finality-grandpa     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-finality-grandpa-rpc = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-rpc                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-sync-state-rpc       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-transaction-pool     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-transaction-pool-api = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
# paritytech frame
pallet-transaction-payment-rpc = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
substrate-frame-rpc-system     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
# paritytech primitives
sc-network        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sp-api            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sp-block-builder  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sp-blockchain     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sp-consensus      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sp-consensus-babe = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sp-keystore       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sp-runtime        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
