[package]
name = "darwinia-cli"
version = "2.0.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia CLI interface."
edition = "2018"

[dependencies]
# crates.io
ansi_term = "0.12.1"
app_dirs = "1.2.1"
atty = "0.2.13"
clap = "2.33.0"
derive_more = "0.99.2"
env_logger = "0.7.0"
fdlimit = "0.1.1"
futures = { version = "0.3.1", features = ["compat"] }
lazy_static = "1.4.0"
log = "0.4.8"
names = "0.11.0"
regex = "1.3.1"
serde_json = "1.0.41"
structopt = "=0.3.7"
time = "0.1.42"
tokio = "0.2.1"

# github.com
sc-client-api = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }
sc-network = { version = "0.8", git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }
sc-service = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }
sc-tracing = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }
sp-blockchain = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }
sp-keyring = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }
sp-panic-handler = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }
sp-state-machine = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }
sc-telemetry = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "pre-v2.0-3e65111" }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
rpassword = "4.0.1"

[dev-dependencies]
tempfile = "3.1.0"

[features]
wasmtime = [
	"sc-service/wasmtime",
]
