[package]
name = "darwinia-cli"
version = "0.5.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia CLI interface."
edition = "2018"
license = "GPL-3.0"
homepage = "https://darwinia.network/"
repository = "https://github.com/darwinia-network/darwinia/"

[dependencies]
# crates.io
app_dirs = "1.2.1"
ansi_term = "0.12.1"
atty = "0.2.13"
chrono = "0.4.10"
clap = "2.33.0"
derive_more = "0.99.2"
env_logger = "0.7.0"
futures = "0.3.1"
fdlimit = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.8"
names = "0.11.0"
parity-util-mem = { version = "0.5.1", default-features = false, features = ["primitive-types"] }
regex = "1.3.1"
serde = "1.0.102"
serde_json = "1.0.41"
structopt = "0.3.8"
time = "0.1.42"
tokio = { version = "0.2.9", features = [ "signal", "rt-core", "rt-threaded" ] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
rpassword = "4.0.1"

# github.com
sc-informant = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-panic-handler = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sc-client-api = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-blockchain = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sc-network = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-runtime = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-core = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sc-service = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-state-machine = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sc-telemetry = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
substrate-prometheus-endpoint = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-keyring = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sc-tracing = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }

[dev-dependencies]
tempfile = "3.1.0"

[features]
wasmtime = [
	"sc-service/wasmtime",
]
